# GLRender

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.chglog/: config.yml
.github/workflows/: codeql-analysis.yml  linux.yml  windows.yml
docs/: bunny
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app_state.h  main.cpp  res.rc
src/common/: color.h  log.cpp  log.h  scope_guard.h  singleton.h  swtich.h  use_busy_dialog.cpp  use_busy_dialog.h
src/io/: input.hpp
src/mesh/: CMakeLists.txt  cube.h  mesh.h  ply.cpp  ply.h  triangle.h
src/render/: CMakeLists.txt  camera.h  renderer.cpp  renderer.h  trackball.h
src/viewer/: CMakeLists.txt  camera.h  droid_sans.h  fork_awesome_webfont.h  global_render_options.cpp  global_render_options.h  icon.png.h  imgui_helper.hpp  layout.h  line_render_options.cpp  line_render_options.h  main_window.cpp  main_window.h  mesh.h  points_render_options.cpp  points_render_options.h  render_options_panel.cpp  render_options_panel.h  style.h  surface_render_options.cpp  surface_render_options.h
test/: CMakeLists.txt  main_test.cpp
